--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div>
-        <form id="myForm" action=""> 
+        <form id="myForm" action="." method="POST"> 
             <select name="" class="pairsAmount" id="">
                 <option value="4">4</option>
                 <option value="6">6</option>
@@ -35,9 +35,11 @@
                 <option value="Green">Green</option>
                 <option value="Yellow">Yellow</option>
             </select>
-            <input type="submit" value="Submit">
+            <input type="submit" id="submitChoices" value="Submit"/>
         </form>
     </div>
+
+    <div id="content"></div>
     
 </body>
 </html>
