--- a/game.html
+++ b/game.html
@@ -18,27 +18,16 @@
         type="text/javascript"></script>
     <!-- END -- This stuff is needed for the Dropdown Multiselect plugin-->
 
-    <script src="script/script.js"></script>
+    <script src="script/game.js"></script>
 </head>
 <body>
 
-    <div>
-        <form id="myForm" action="/game.html" method="POST"> 
-            <select name="" class="pairsAmount" id="">
-                <option value="4">4</option>
-                <option value="6">6</option>
-                <option value="8">8</option>
-                <option value="10">10</option>
-            </select>
-            <select name="typesOfCards" multiple id="colorChoices">
-                <option value="Blue" selected>Blue</option>
-                <option value="Red" selected>Red</option>
-                <option value="Green">Green</option>
-                <option value="Yellow">Yellow</option>
-            </select>
-            <input type="submit" id="submitChoices" value="Submit"/>
-        </form>
+    <div id="content"></div>
+    <div class="flip-card">
+        <div class="flip-card-inner">
+        <div class="flip-card-front"></div>
+        <div class="flip-card-back"></div>
+        </div>
     </div>
-    
 </body>
 </html>
