Cleaned the code and also made it so the elements will dissapear when they match, invisible elements are not detected anymore and cannot be compared to other cards either. Preparations for CSS

--- a/game.html
+++ b/game.html
@@ -19,15 +19,11 @@
     <!-- END -- This stuff is needed for the Dropdown Multiselect plugin-->
 
     <script src="script/game.js"></script>
+    <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
     <div id="content"></div>
-    <div class="flip-card">
-        <div class="flip-card-inner">
-        <div class="flip-card-front"></div>
-        <div class="flip-card-back"></div>
-        </div>
-    </div>
+ 
 </body>
 </html>
